--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <img src="img/lambda-black.png" alt="lambdalogo">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#">Products</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    
     <div class="container">
-   
+        <img src="img/jumbo.jpg" alt="jumbo">
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
@@ -63,8 +74,8 @@
         
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
